@@ -58,6 +58,9 @@ firefox-trunk (24.0~a1~hg20130623r136205-0ubuntu1~umd1) UNRELEASED; urgency=low
   * Build with --disable-gstreamer for now, as this adds a hard dependency on
     the *old* gstreamer stack. Reenable this once Firefox has been dropped
     from the default install
+  * Support running unit tests from an unpacked testsuite tarball anywhere on the
+    filesystem
+    - update debian/testing/testrunhelper.py
 
  -- Chris Coulson <chris.coulson@canonical.com>  Wed, 15 May 2013 12:22:10 +0100
 
